# PolyEngine

./: CMakeLists.txt  README.md
scripts/: setup_deps.bat  setup_deps.sh
shaders/: cull.comp.glsl  flat.frag.glsl  instanced.vert.glsl
src/: app.cpp  app.h  camera.cpp  camera.h  fs_util.cpp  fs_util.h  import_watcher.cpp  import_watcher.h  importer.cpp  importer.h  log.h  main.cpp  math.h  mesh.cpp  mesh.h  pack_formats.h  pipelines.cpp  pipelines.h  renderer.cpp  renderer.h  unit_cube.cpp  unit_cube.h  vk_context.cpp  vk_context.h
